# papers-2025-rnaseq-chrom-aging

./: .gitignore  LICENSE  README.md  pyproject.toml
data/Preprocessed_data/Fleischer/: fpkm_data_PCA.csv  fpkm_data_SVD20.csv
data/Preprocessed_data/Fleischer/chromosome_1/: chromosome_1_ec_hc_mask_xy.csv
data/Preprocessed_data/Fleischer/chromosome_10/: chromosome_10_ec_hc_mask_xy.csv
data/Preprocessed_data/Fleischer/chromosome_11/: chromosome_11_ec_hc_mask_xy.csv
data/Preprocessed_data/Fleischer/chromosome_12/: chromosome_12_ec_hc_mask_xy.csv
data/Preprocessed_data/Fleischer/chromosome_13/: chromosome_13_ec_hc_mask_xy.csv
data/Preprocessed_data/Fleischer/chromosome_14/: chromosome_14_ec_hc_mask_xy.csv
data/Preprocessed_data/Fleischer/chromosome_15/: chromosome_15_ec_hc_mask_xy.csv
data/Preprocessed_data/Fleischer/chromosome_16/: chromosome_16_ec_hc_mask_xy.csv
data/Preprocessed_data/Fleischer/chromosome_17/: chromosome_17_ec_hc_mask_xy.csv
data/Preprocessed_data/Fleischer/chromosome_18/: chromosome_18_ec_hc_mask_xy.csv
data/Preprocessed_data/Fleischer/chromosome_19/: chromosome_19_ec_hc_mask_xy.csv
data/Preprocessed_data/Line1/: fpkm_data_PCA.csv  fpkm_data_SVD20.csv
data/input/Fleischer/: metadata.csv
data/input/Line1/DiffAnalysis/: GeneId_Start_End_Chr.csv  (+2 more)
scripts/: params_preprocess.yaml  preprocessing.ipynb
scripts/Cel/: PostProcess_cel_Fleischer.ipynb  PostProcess_cel_l1.ipynb  cel_script.ipynb  params_cel.yaml
scripts/Icgcl/: PostProcess_icgcl_Fleischer.ipynb  PostProcess_icgcl_l1.ipynb  icgcl_script.ipynb  params_icgcl.yaml
(+729 files in other folders)
